# motion-saliency

./: pyproject.toml
motion-saliency/: motion_saliency.py
